sonar integration